# wm

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/wm/: Dockerfile  __init__.py  app.py  cli.py  config.py  container.py  discovery.py  experiment.py  git_check.py  runner.py  snapshot.py  validation.py
src/wm/templates/: app.py.template  example_experiment.py  gitignore  project.yaml  pyproject.toml.template
tests/: conftest.py  test_app.py  test_cli.py  test_config.py  test_container.py  test_discovery.py  test_experiment.py  test_git_check.py  test_runner.py  test_snapshot.py  test_validation.py
