[project]
name = "wm"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "modal>=1.3.5",
    "wandb>=0.19.0",
    "click>=8.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "gitpython>=3.1.46",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"src/wm/Dockerfile" = "wm/Dockerfile"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]
